PN-17937-bis: fix test after migration